adding pythong job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,6 +106,7 @@ jobs:
         name: Hello!
         command: |
             echo "testing!"
+    - run:
         name: Install lw-scanner
         command: |
             wget https://github.com/lacework/lacework-vulnerability-scanner/releases/download/v0.2.0/lw-scanner-linux-amd64.tar.gz -O lw-scanner.tar.gz
@@ -115,6 +116,7 @@ jobs:
             chmod +x ./bin/lw-scanner
             # check scanner
             ./bin/lw-scanner > /dev/null 2>&1
+    - run:
         name: Pull Python Image
         command: |
             docker pull node:10
