--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ workflows:
   with-lw-scanner:
    jobs:
       - scan-vuln-image-with-lw-scanner
-      #- build-and-scan-vuln-image
+      - scan-community-image-pretty-output
       - build-and-scan-python-image
   #with-lacework-cli:
   #  jobs:
@@ -17,7 +17,6 @@ jobs:
     machine: true
     steps:
     - checkout
-
     - run: echo "testing"
     - run:
         # In lieu if having an install script proper, the following block
@@ -49,6 +48,23 @@ jobs:
           fi
     - store_artifacts:
         path: lacework-artifacts
+
+  scan-community-image-pretty-output:
+    machine: true
+    steps:
+    - run:
+        # In lieu if having an install script proper, the following block
+        # pulls in the lw-scanner binary, un-tars it, and makes it executable.
+        name: Install lw-scanner
+        command: |
+          wget https://github.com/lacework/lacework-vulnerability-scanner/releases/download/v0.2.0/lw-scanner-linux-amd64.tar.gz -O lw-scanner.tar.gz
+          # This places the binary in a folder /bin/lw-scanner
+          tar xvf lw-scanner.tar.gz
+          # Make this executable
+          chmod +x ./bin/lw-scanner
+          # check scanner
+          ./bin/lw-scanner > /dev/null 2>&1
+
   build-and-scan-vuln-image:
     machine: true
     steps:
