--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,7 +68,7 @@ jobs:
         name: Execute scan
         command: |
           # Need to move this
-          ./bin/lw-scanner evaluate chriscircleci/vuln_django 7f7305bea884b63578c28d4513a916e2247ec152 -d=/home/circleci/project/ --scan-library-packages --html --pretty
+          ./bin/lw-scanner image evaluate chriscircleci/vuln_django 7f7305bea884b63578c28d4513a916e2247ec152 -d=/home/circleci/project/ --scan-library-packages --html --pretty
 
   build-and-scan-vuln-image:
     machine: true
