--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,10 @@ orbs:
 workflows:
   with-lw-scanner:
    jobs:
-      # - scan-vuln-image-with-lw-scanner
+      - scan-vuln-image-with-lw-scanner
       # - scan-community-image-pretty-output
       # - build-and-scan-python-image
-      - scan-packer-ami
+      # - scan-packer-ami
   #with-lacework-cli:
   #  jobs:
   #    - cli-scan
@@ -18,13 +18,13 @@ jobs:
     machine: true
     steps:
     - checkout
-    - run: echo "testing"
+    - run: echo "Executing vuln scan"
     - run:
         # In lieu if having an install script proper, the following block
         # pulls in the lw-scanner binary, un-tars it, and makes it executable.
         name: Install lw-scanner
         command: |
-          wget https://github.com/lacework/lacework-vulnerability-scanner/releases/download/v0.2.0/lw-scanner-linux-amd64.tar.gz -O lw-scanner.tar.gz
+          wget https://github.com/lacework/lacework-vulnerability-scanner/releases/download/v0.22.0/lw-scanner-linux-amd64.tar.gz -O lw-scanner.tar.gz
           # This places the binary in a folder /bin/lw-scanner
           tar xvf lw-scanner.tar.gz
           # Make this executable
@@ -33,12 +33,12 @@ jobs:
           ./bin/lw-scanner > /dev/null 2>&1
     - run:
         name: Fetch image
-        command: docker pull chriscircleci/vuln_django:7f7305bea884b63578c28d4513a916e2247ec152
+        command: docker pull vulnerables/web-dvwa
     - run:
         name: Execute scan
         command: |
           # Need to move this
-          ./bin/lw-scanner evaluate chriscircleci/vuln_django 7f7305bea884b63578c28d4513a916e2247ec152 -d=/home/circleci/project/ --scan-library-packages --html --save --tags ci_provider=circleci,user=aedifex,build_stage=dev,component=node_frontend
+          ./bin/lw-scanner evaluate vulnerables/web-dvwa latest -d=/home/circleci/project/ --scan-library-packages --html --save --tags ci_provider=circleci,user=aedifex,build_stage=dev,component=node_frontend
     - run:
         name: Create directory to persist artifacts
         command: |
