--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,15 @@ orbs:
 workflows:
   with-lw-scanner:
    jobs:
-      - scan-vuln-image-with-lw-scanner
+      - code-lint
+      - code-cov
+      - build-image:
+          requires:
+            - code-cov
+            - code-lint
+      - scan-vuln-image-with-lw-scanner:
+          requires:
+            - build-image
       # - scan-community-image-pretty-output
       # - build-and-scan-python-image
       # - scan-packer-ami
@@ -14,6 +22,24 @@ workflows:
   #    - cli-scan
 
 jobs:
+  code-cov:
+    machine: true
+    steps:
+    - checkout
+    - run: echo "Executing vuln scan"
+
+  code-lint:
+    machine: true
+    steps:
+    - checkout
+    - run: echo "Executing vuln scan"
+
+  build-image:
+    machine: true
+    steps:
+    - checkout
+    - run: echo "Executing vuln scan"
+
   scan-vuln-image-with-lw-scanner:
     machine: true
     steps:
