Include cli driven workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,9 +21,9 @@ workflows:
       # - scan-community-image-pretty-output
       # - build-and-scan-python-image
       # - scan-packer-ami
-  #with-lacework-cli:
-  #  jobs:
-  #    - cli-scan
+  with-lacework-cli:
+    jobs:
+      - cli-scan
 
 jobs:
   code-cov:
