--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -134,12 +134,16 @@ jobs:
     executor: lacework/default
     steps:
       - checkout
-      - lacework/ctr-vuln-scan:
-          registry: "index.docker.io"
-          repository: chriscircleci/vuln_django
-          tag: 7f7305bea884b63578c28d4513a916e2247ec152
-          fail_on_fixable: false
-          html: true
+      # - lacework/ctr-vuln-scan:
+      #     registry: "index.docker.io"
+      #     repository: chriscircleci/vuln_django
+      #     tag: 7f7305bea884b63578c28d4513a916e2247ec152
+      #     fail_on_fixable: false
+      #     html: true
+      - run:
+          name: Configure LW cli-scan
+          command: |
+            lacework Configure
       - run:
           name: Persist html vuln report as build artifact
           command: |
