--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -143,7 +143,7 @@ jobs:
       - run:
           name: Configure LW cli-scan
           command: |
-            lacework Configure
+            lacework configure
       - run:
           name: Persist html vuln report as build artifact
           command: |
