--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,10 +15,12 @@ workflows:
           type: approval
           requires:
             - build-image
-      - scan-vuln-image-with-lw-scanner:
+      - scan-dvwa-vuln-image-with-lw-scanner:
           requires:
             - hold-for-approval
-      # - scan-community-image-pretty-output
+      - scan-custom-vuln-image-with-lw-scanner:
+          requires:
+            - hold-for-approval
       # - build-and-scan-python-image
       # - scan-packer-ami
   with-lacework-cli:
@@ -46,7 +48,43 @@ jobs:
     - checkout
     - run: echo "Executing vuln scan"
 
-  scan-vuln-image-with-lw-scanner:
+  scan-dvwa-vuln-image-with-lw-scanner:
+    machine: true
+    steps:
+    - checkout
+    - run: echo "Executing vuln scan"
+    - run:
+        # In lieu if having an install script proper, the following block
+        # pulls in the lw-scanner binary, un-tars it, and makes it executable.
+        name: Install lw-scanner
+        command: |
+          wget https://github.com/lacework/lacework-vulnerability-scanner/releases/download/v0.22.0/lw-scanner-linux-amd64.tar.gz -O lw-scanner.tar.gz
+          # This places the binary in a folder /bin/lw-scanner
+          tar xvf lw-scanner.tar.gz
+          # Make this executable
+          chmod +x ./bin/lw-scanner
+          # check scanner
+          ./bin/lw-scanner > /dev/null 2>&1
+    - run:
+        name: Fetch image
+        command: docker pull vulnerables/web-dvwa
+    - run:
+        name: Execute scan
+        command: |
+          # Need to move this
+          ./bin/lw-scanner evaluate vulnerables/web-dvwa latest -d=/home/circleci/project/ --scan-library-packages --html --save --tags ci_provider=circleci,user=aedifex,build_stage=dev,component=node_frontend
+    - run:
+        name: Create directory to persist artifacts
+        command: |
+          mkdir  lacework-artifacts/
+
+          if [ `ls -1 *.html 2>/dev/null | wc -l ` -gt 0 ]; then
+            mv *.html lacework-artifacts/
+          fi
+    - store_artifacts:
+        path: lacework-artifacts
+
+  scan-custom-vuln-image-with-lw-scanner:
     machine: true
     steps:
     - checkout
