--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,12 +54,13 @@ jobs:
 
   build-node-image:
     machine: true
+    working_directory: ~/project/src/node_image
     steps:
     - checkout
     - run:
         name: Build Node Docker Image
-        command: |
-            docker build -t aedifex_node:lacework-test  -f src/node_image/Dockerfile --label "component=lrad"
+        command: docker build -t aedifex_node:lacework-test --label "component=lrad" .
+
 
   build-kali-image:
     machine: true
