--- a/src/kali_image/Dockerfile
+++ b/src/kali_image/Dockerfile
@@ -1,4 +1,8 @@
 # Kali Linux Image
 FROM kalilinux/kali-rolling
-RUN apt-get update && apt-get install -y kali-linux-default
+
+RUN apt-get update && apt-get install -y kali-linux-default \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+
 CMD ["bash"]
