--- a/src/kali_image/Dockerfile
+++ b/src/kali_image/Dockerfile
@@ -1,7 +1,11 @@
 # Kali Linux Image
 FROM kalilinux/kali-rolling
 
-RUN apt-get update && apt-get install -y kali-linux-default \
+ENV DEBIAN_FRONTEND=noninteractive
+
+RUN apt-get update \
+    && apt-get upgrade -y \
+    && apt-get install -y --no-install-recommends kali-linux-core \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
