--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,6 +86,18 @@ jobs:
     - run:
         name: Build Kali Docker Image
         command:  docker build -t aedifex_kali:lacework-test -f src/kali_image/Dockerfile  --label "component=lrad" .
+    - run:
+        # In lieu if having an install script proper, the following block
+        # pulls in the lw-scanner binary, un-tars it, and makes it executable.
+        name: Install lw-scanner
+        command: |
+          wget https://github.com/lacework/lacework-vulnerability-scanner/releases/download/v0.22.0/lw-scanner-linux-amd64.tar.gz -O lw-scanner.tar.gz
+          # This places the binary in a folder /bin/lw-scanner
+          tar xvf lw-scanner.tar.gz
+          # Make this executable
+          chmod +x ./bin/lw-scanner
+          # check scanner
+          ./bin/lw-scanner > /dev/null 2>&1
 
   build-alpine-image:
     machine: true
@@ -95,6 +107,18 @@ jobs:
     - run:
         name: Build Alpine Docker Image
         command:  docker build -t aedifex_alpine:lacework-test -f src/alpine_image/Dockerfile  --label "component=lrad" .
+    - run:
+        # In lieu if having an install script proper, the following block
+        # pulls in the lw-scanner binary, un-tars it, and makes it executable.
+        name: Install lw-scanner
+        command: |
+          wget https://github.com/lacework/lacework-vulnerability-scanner/releases/download/v0.22.0/lw-scanner-linux-amd64.tar.gz -O lw-scanner.tar.gz
+          # This places the binary in a folder /bin/lw-scanner
+          tar xvf lw-scanner.tar.gz
+          # Make this executable
+          chmod +x ./bin/lw-scanner
+          # check scanner
+          ./bin/lw-scanner > /dev/null 2>&1
 
   scan-dvwa-vuln-image-with-lw-scanner:
     machine: true
