Build custom Alpine version

--- a/src/alpine_image/Dockerfile
+++ b/src/alpine_image/Dockerfile
@@ -1,9 +1,9 @@
 # From the original
-# FROM alpine:3.12.1
+FROM alpine:3.12.1
  
 # CMD ["echo", "Hello from Aedifex!"]
 
 # Generic Alpine Image
-FROM alpine:latest
+# FROM alpine:latest
 RUN apk add --no-cache bash
 CMD ["bash"]
